; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_buffer.c_buf_clear.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_buffer.c_buf_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i64, i64, i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @buf_clear(%struct.buffer* %0) #0 {
  %2 = alloca %struct.buffer*, align 8
  store %struct.buffer* %0, %struct.buffer** %2, align 8
  %3 = load %struct.buffer*, %struct.buffer** %2, align 8
  %4 = getelementptr inbounds %struct.buffer, %struct.buffer* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load %struct.buffer*, %struct.buffer** %2, align 8
  %9 = getelementptr inbounds %struct.buffer, %struct.buffer* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.buffer*, %struct.buffer** %2, align 8
  %12 = getelementptr inbounds %struct.buffer, %struct.buffer* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @secure_memzero(i32 %10, i64 %13)
  br label %15

15:                                               ; preds = %7, %1
  %16 = load %struct.buffer*, %struct.buffer** %2, align 8
  %17 = getelementptr inbounds %struct.buffer, %struct.buffer* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.buffer*, %struct.buffer** %2, align 8
  %19 = getelementptr inbounds %struct.buffer, %struct.buffer* %18, i32 0, i32 1
  store i64 0, i64* %19, align 8
  ret void
}

declare dso_local i32 @secure_memzero(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
